sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1e/errors.dfrouter
Error: Attribute 'pos' in definition of detectorDefinition 'MQ11Fs1' is empty.
Quitting (on error).
